LIST OF CHANGES

release 42.10.0
 - load uqc outcomes to iseq_product_metrics table and use
   this value, if defined, to set the overall qc outcome
   for a product
 - load interop autoqc check results to iseq_run_lane_metrics table

release 42.9.0
 - manifest generation:
     flag-driven upload of an empty manifest for external products
     flag-driven skipping of validation against staging md5 
     a bug in counting the number of remote files is fixed

release 42.8.0
 - warehouse loader - add loading manufacturer's instrument
   name

release 42.7.1
 - manifest generation: exclude annulled products

release 42.7
 - external product report loader:
     column mapping update,
     bug fixes for merged top-up data

release 41.6.1
 - recognise 'NA' string as a valid value for Fractional_NRD and
   NRD_pass report columns; meaning - the array data for that sample
   is not available
 - report what is being parsed

release 41.6.0
 - run data deletion from ml warehouse - bug fix
   (product rows for merged data were not deleted)
 - loader for an external report:
    deal with externally merged data and external QC data

release 41.5.0
 - script to generate and upload a manifest for a study
 - script to load external report to ml warehouse

release 41.4.0
 - test data enhancement to ensure forward compatibility

release 41.3
 - run folders for test data restructured to reflect new-style
product hierarchy
 - bug fix for setting (or not) foreign keys on update

release 41.2.1
 - change lims_fk_repair flag default from false to true to
   mitigate code regression in release 41.2, which erases value of
   the foreign key into iseq_flowcelt table on subsequent runs of
   the loader for a particular run (is the foreign key is set
   correctly only if no data exist in the product table)

release 41.2
 - a new role - npg_warehouse::loader::product - consolidates
   methods for retrieving autoqc data for compositions and
   loading this data to the iseq_product_metrics table